gitops/pve-klg-p/apps/default/odoo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: odoo
spec:
  parentRefs:
    - name: homelab
      namespace: gateway
  hostnames:
    - odoo.cosmdandy.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: odoo
          port: 8069
